--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,18 @@
 
     <groupId>com.demians</groupId>
     <artifactId>jdbc-dogs</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>breeds</module>
+        <module>jdbc-util</module>
+    </modules>
+
+    <properties>
+        <maven.compiler.source>1.10</maven.compiler.source>
+        <maven.compiler.target>1.10</maven.compiler.target>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -46,7 +57,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.8</version>
         </dependency>
-
     </dependencies>
 
 </project>
